Build a fraction tab: Added fraction skeleton to the toolbox, and animate it out when the user solves a target (and doesn't already have another fraction skeleton in the play area)
Build a fraction tab: Fixed: When navigating back a level, it should remember if you solved the level and not create the level anew
Build a fraction tab: Fixed: Level text should accommodate double digits level size
Build a fraction tab: Fixed: Level numbering should start at 1, not zero
Build a fraction tab: Removed "0" from levels
Build a fraction tab: Sort numbers in the toolbox
Build a fraction tab: Added a level indicator and navigation buttons
Build a fraction tab: Space out numbers equally in the toolbox
Build a fraction tab: Added stacks of cards for the numbers
Build a fraction tab: Remove confirmation dialog for reset all
Build a fraction tab: Fade out previous level when going to next level to support other aspect ratios
Build a fraction tab: Added bucket icon
Build a fraction tab: Added pieces in the bucket
Build a fraction tab: Added enable/disable for bucket spinner buttons
Build a fraction tab: Added bucket spinner buttons
# 0.00.80 (64782) Jun 7, 2012
Fraction Matcher: Fixed stroke width for compound pattern shapes (for fraction > 1)
# 0.00.79 (64772) Jun 7, 2012
Started on "pictures" scene
Removed package buildafraction_functional
Added scene layer for navigation
Build a fraction tab: Added radio buttons for changing game types, not wired up yet
# 0.00.78 (64716) Jun 6, 2012
Matching Game Tab: Performance improvements for fraction representations flying back to their containers or to the match containers
# 0.00.77 (64713) Jun 6, 2012
Added reset all button
Randomized level 0
Added fractions >1
Fixed: number should become pickable after splitting a fraction
Animate new fractions
Wired up "split fraction" button
Numbers go back to their starting location when dropped in the toolbox or in an empty region of the play area
Added multiple levels